(fix) graph legend alignment

--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -87,7 +87,7 @@ $dashboard-line-color-market: $secondary !default;
 }
 
 .dashboard-banner-chart-legend {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
 
